--- a/devspace-blog/package.json
+++ b/devspace-blog/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "marked": "^8.0.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
