search added without cache

--- a/devspace-blog/package.json
+++ b/devspace-blog/package.json
@@ -10,7 +10,8 @@
     "marked": "^8.0.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.5",
